// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="DatePicker"
  data-test-id="cf-ui-date-picker"
>
  <DatePicker
    calendarIcon={
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          stroke="black"
          strokeWidth="2"
        >
          <rect
            fill="none"
            height="15"
            width="15"
            x="2"
            y="2"
          />
          <line
            x1="6"
            x2="6"
            y1="0"
            y2="4"
          />
          <line
            x1="13"
            x2="13"
            y1="0"
            y2="4"
          />
        </g>
      </svg>
    }
    clearIcon={
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          stroke="black"
          strokeWidth="2"
        >
          <line
            x1="4"
            x2="15"
            y1="4"
            y2="15"
          />
          <line
            x1="15"
            x2="4"
            y1="4"
            y2="15"
          />
        </g>
      </svg>
    }
    isOpen={true}
    returnValue="start"
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="DatePicker my-extra-class"
  data-test-id="cf-ui-date-picker"
>
  <DatePicker
    calendarIcon={
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          stroke="black"
          strokeWidth="2"
        >
          <rect
            fill="none"
            height="15"
            width="15"
            x="2"
            y="2"
          />
          <line
            x1="6"
            x2="6"
            y1="0"
            y2="4"
          />
          <line
            x1="13"
            x2="13"
            y1="0"
            y2="4"
          />
        </g>
      </svg>
    }
    clearIcon={
      <svg
        height="19"
        viewBox="0 0 19 19"
        width="19"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          stroke="black"
          strokeWidth="2"
        >
          <line
            x1="4"
            x2="15"
            y1="4"
            y2="15"
          />
          <line
            x1="15"
            x2="4"
            y1="4"
            y2="15"
          />
        </g>
      </svg>
    }
    isOpen={true}
    returnValue="start"
  />
</div>
`;
